tests/negative/typecheck/try-function-incompat.orng
fn main() -> Int {
    f() catch 0
}

fn f() -> (err:Char|)!Int {
    let x = try g()
    .ok(x)
}

fn g() -> (err|)!Int {
    return .err
}